--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,4 +1,6 @@
 .Header {
+    position: fixed;
+    top: 0;
     display: flex;
     background-color: #C3CFD9;
     color: #E8833A;
@@ -11,5 +13,5 @@
     font-weight: 400;
     font-size: 34px;
     line-height: 40px;
-    margin-bottom: 25px;
+    z-index: 100;
 }
