--- a/src/Components/scopo/scopo.css
+++ b/src/Components/scopo/scopo.css
@@ -3,8 +3,9 @@
     display: flex;
     background-color: #E5E5E5;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     align-items: center;
+    padding-top: 100px;
 }
 
 h1 {
