--- a/src/Components/scopo/scopo.css
+++ b/src/Components/scopo/scopo.css
@@ -3,7 +3,7 @@
     display: flex;
     background-color: #E5E5E5;
     width: 100vw;
-    height: 100%;
+    min-height: 100vh;
     align-items: center;
     padding-top: 100px;
 }
