--- a/src/Components/scopo/scopo.css
+++ b/src/Components/scopo/scopo.css
@@ -4,8 +4,10 @@
     background-color: #E5E5E5;
     width: 100vw;
     min-height: 100vh;
+    max-height: 100vh;
     align-items: center;
     padding-top: 100px;
+    overflow:scroll;
 }
 
 h1 {
