--- a/src/Components/MovieSelected/MovieSelected.css
+++ b/src/Components/MovieSelected/MovieSelected.css
@@ -16,7 +16,7 @@
     height: 72px;
 }
 
-.MovieSelected div {
+.logo {
     width: 64px;
     height: 89px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -30,12 +30,20 @@
 }
 
 .MovieSelected h5 {
+    margin: 0;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 26px;
+    font-size: 20px;
     line-height: 30px;
     align-items: center;
     color: #293845;
 
+}
+.date{
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+    max-height: 100%;
+    background-color: none;
 }
