--- a/src/Components/Movies/Movies.css
+++ b/src/Components/Movies/Movies.css
@@ -1,4 +1,4 @@
-li {
+.li {
     margin-left: 30px;
     width: 145px;
     height: 209px;
@@ -33,4 +33,8 @@ ul {
 }
 a {
     z-index: 100;
+}
+.catalogo{
+    overflow: hidden;
+    overflow-y: scroll;
 }
