--- a/src/Components/Assentos/Assentos.css
+++ b/src/Components/Assentos/Assentos.css
@@ -45,13 +45,16 @@
 }
 
 h2 {
+    text-align: center;
+        
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 11px;
     line-height: 13px;
     letter-spacing: 0.04em;
-
+    width: 100%;
+    max-height: 100%;
     color: #000000;
 }
 
@@ -96,7 +99,27 @@ h3 {
 }
 
 
-
+.selecionadoss{
+    display: flex;
+    flex-direction: column;
+    max-width: 325px;
+    font-size: 12px;
+    justify-content: flex-start;
+    text-align: start;
+    padding: 0;
+   
+}
+.selecionadoss li{
+    min-height: 25px;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    border-width: 2px;
+    border-color: black;
+    border-style:solid;
+}
 h4 {
     font-family: 'Roboto';
     font-style: normal;
@@ -130,6 +153,7 @@ input {
 }
 li {
     z-index: 100;
+    list-style-type: none;
 }
 .buttonReserva {
     font-family: 'Roboto';
@@ -155,4 +179,21 @@ li {
     margin-bottom: 120px;
     overflow: hidden;
     overflow-y: scroll;
+}
+.reserva{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    width: 225px;
+    height: 42px;
+    background: green;
+    border-radius: 5px;
+    border-width: 0;
+    margin-top: 25px;
 }
