--- a/src/Components/Assentos/Assentos.css
+++ b/src/Components/Assentos/Assentos.css
@@ -103,14 +103,15 @@ h3 {
     display: flex;
     flex-direction: column;
     max-width: 325px;
-    font-size: 12px;
+    font-size: 14px;
     justify-content: flex-start;
     text-align: start;
     padding: 0;
    
 }
 .selecionadoss li{
-    min-height: 25px;
+    min-height: 30px;
+    font-family: 'Roboto';
     display: flex;
     align-items: center;
     background-color: white;
