--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -15,3 +15,10 @@
     line-height: 40px;
     z-index: 100;
 }
+.Header img {
+    width: 35px;
+    position: fixed;
+    left:5px;
+    top:25px;
+ }
+ 
