--- a/src/Components/MovieSelected/MovieSelected.css
+++ b/src/Components/MovieSelected/MovieSelected.css
@@ -7,8 +7,8 @@
     background: #DFE6ED;
     border: 1px solid #9EADBA;
     position: absolute;
-    bottom: 0;
-    padding-left: 10px;
+    bottom: 0px;
+    z-index: 1000;
 }
 
 .MovieSelected img {
