--- a/src/Components/scopo/scopo.css
+++ b/src/Components/scopo/scopo.css
@@ -8,6 +8,8 @@
     align-items: center;
     padding-top: 100px;
     overflow:hidden;
+    position: relative;
+
 }
 
 h1 {
@@ -21,4 +23,7 @@ h1 {
 
     color: #293845;
 
+}
+body {
+    max-height: 100vh;
 }
